# jeeves

./: .env  .gitignore  AGENTS.md  CLAUDE.md  Cargo.toml  LICENSE  README.md  create-issue-from-design-doc.sh  eslint.config.mjs  init-issue.sh  issue.json.example  jeeves.sh  lefthook.yml  metrics.jsonl  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  prompt.issue.ci.md  prompt.issue.coverage.fix.md  prompt.issue.coverage.md  prompt.issue.design.md  prompt.issue.implement.md  prompt.issue.questions.md  prompt.issue.review.md  prompt.issue.sonar.md  prompt.issue.task.implement.md  prompt.issue.task.quality-review.md  prompt.issue.task.spec-review.md  prompt.md  pyproject.toml  ralph.sh  ralph.test.sh  sonarcloud-issues.sh  task-issues.md  task-quality-review.md  task-spec-review.md  tsconfig.base.json  tsconfig.json  vitest.config.ts
docs/: README.md  codex-skills-assessment.md  design-document-template.md  design-template-v2.md  feature-interactive-issue-creation.md  integrated-skills.md  issue-10-design.md  issue-103-design.md  issue-108-design.md  issue-108-replay-validation.md  issue-119-design.md  issue-12-design.md  issue-14-design.md  issue-17-design.md  issue-19-design.md  issue-23-design.md  issue-59-design.md  issue-63-style-audit.md  issue-68-design.md  issue-7-design.md  issue-71-design.md  issue-72-design.md  issue-76-design.md  issue-78-design.md  issue-80-design.md  issue-95-design.md  issue-98-design.md  jeeves-debug-schema.json  jeeves-run-index-schema.json  output-schema-v2.json  parallel-execution.md  sdk-output-schema.json  viewer-server-api.md  (+1 more)
(+385 files in other folders)
