[project]
name = "jeeves-runner"
version = "0.1.0"
description = "Jeeves SDK Runner - Agent SDK-based runner for autonomous coding"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [
    { name = "Jeeves Team" }
]

dependencies = [
    "claude-agent-sdk>=0.1.0",
    "click>=8.0",
    "platformdirs>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
]

[project.scripts]
jeeves = "jeeves.cli:main"
jeeves-sdk-runner = "jeeves.runner.sdk_runner:main"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["jeeves*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["jeeves"]
